--- a/package.json
+++ b/package.json
@@ -1465,6 +1465,7 @@
     "@kbn/yarn-lock-validator": "link:packages/kbn-yarn-lock-validator",
     "@mapbox/vector-tile": "1.3.1",
     "@mswjs/http-middleware": "^0.10.1",
+    "@nx/eslint": "19.7.3",
     "@octokit/rest": "^17.11.2",
     "@parcel/watcher": "^2.1.0",
     "@playwright/test": "=1.46.0",
@@ -1824,9 +1825,8 @@
     "xmlbuilder": "13.0.2",
     "yargs": "^15.4.1",
     "yarn-deduplicate": "^6.0.2",
-    "zod-to-json-schema": "^3.23.0",
-    "@nx/eslint": "19.7.3"
+    "zod-to-json-schema": "^3.23.0"
   },
-  "packageManager": "yarn@1.22.21",
-  "nx": {}
+  "nx": {},
+  "packageManager": "yarn@1.22.21"
 }
