--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -18925,8 +18925,41 @@ paths:
           description: Indicate the event was successfully pinned in the timeline.
       summary: Persists a pinned event to a timeline.
       tags:
-        - Security Solution Timeline API
-        - 'access:securitySolution'
+        - Security Timeline API
+        - access:securitySolution
+  /api/risk_score/engine/dangerously_delete_data:
+    delete:
+      description: >-
+        Cleaning up the the Risk Engine by removing the indices, mapping and
+        transforms
+      operationId: CleanUpRiskEngine
+      responses:
+        '200':
+          content:
+            application/json; Elastic-Api-Version=2023-10-31:
+              schema:
+                type: object
+                properties:
+                  cleanup_successful:
+                    type: boolean
+          description: Successful response
+        '400':
+          content:
+            application/json; Elastic-Api-Version=2023-10-31:
+              schema:
+                $ref: >-
+                  #/components/schemas/Security_Entity_Analytics_API_TaskManagerUnavailableResponse
+          description: Task manager is unavailable
+        default:
+          content:
+            application/json; Elastic-Api-Version=2023-10-31:
+              schema:
+                $ref: >-
+                  #/components/schemas/Security_Entity_Analytics_API_CleanUpRiskEngineErrorResponse
+          description: Unexpected error
+      summary: Cleanup the Risk Engine
+      tags:
+        - Security Entity Analytics API
   /api/risk_score/engine/schedule_now:
     post:
       operationId: ScheduleRiskEngineNow
@@ -38881,7 +38914,28 @@ components:
       required:
         - id_value
         - id_field
-    Security_Solution_Entity_Analytics_API_CreateAssetCriticalityRecord:
+    Security_Entity_Analytics_API_CleanUpRiskEngineErrorResponse:
+      type: object
+      properties:
+        cleanup_successful:
+          example: false
+          type: boolean
+        errors:
+          items:
+            type: object
+            properties:
+              error:
+                type: string
+              seq:
+                type: integer
+            required:
+              - seq
+              - error
+          type: array
+      required:
+        - cleanup_successful
+        - errors
+    Security_Entity_Analytics_API_CreateAssetCriticalityRecord:
       allOf:
         - $ref: >-
             #/components/schemas/Security_Solution_Entity_Analytics_API_AssetCriticalityRecordIdParts
