--- a/oas_docs/output/kibana.serverless.staging.yaml
+++ b/oas_docs/output/kibana.serverless.staging.yaml
@@ -7136,6 +7136,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Creates an endpoint list
+      tags:
+        - Security Solution Endpoint Exceptions API
   /api/endpoint_list/items:
     delete:
       operationId: DeleteEndpointListItem
@@ -7201,6 +7203,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Deletes an endpoint list item
+      tags:
+        - Security Solution Endpoint Exceptions API
     get:
       operationId: ReadEndpointListItem
       parameters:
@@ -7267,6 +7271,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Reads an endpoint list item
+      tags:
+        - Security Solution Endpoint Exceptions API
     post:
       operationId: CreateEndpointListItem
       requestBody:
@@ -7359,6 +7365,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Creates an endpoint list item
+      tags:
+        - Security Solution Endpoint Exceptions API
     put:
       operationId: UpdateEndpointListItem
       requestBody:
@@ -7457,6 +7465,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Updates an endpoint list item
+      tags:
+        - Security Solution Endpoint Exceptions API
   /api/endpoint_list/items/_find:
     get:
       operationId: FindEndpointListItems
@@ -7570,6 +7580,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Finds endpoint list items
+      tags:
+        - Security Solution Endpoint Exceptions API
   /api/endpoint/action:
     get:
       description: Get a list of all response actions.
@@ -34094,6 +34106,11 @@ tags:
       sent to Elastic Security into detection alerts. These alerts are displayed
       on the Detections page.
     name: Security Solution Detections API
+  - description: >-
+      Endpoint Exceptions API allows you to manage detection rule endpoint
+      exceptions to prevent a rule from generating an alert from incoming events
+      even when the rule's other criteria are met.
+    name: Security Solution Endpoint Exceptions API
   - description: Interact with and manage endpoints running the Elastic Defend integration.
     name: Security Solution Endpoint Management API
   - description: ''
