--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -10469,6 +10469,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Creates an endpoint list
+      tags:
+        - Security Solution Endpoint Exceptions API
   /api/endpoint_list/items:
     delete:
       operationId: DeleteEndpointListItem
@@ -10534,6 +10536,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Deletes an endpoint list item
+      tags:
+        - Security Solution Endpoint Exceptions API
     get:
       operationId: ReadEndpointListItem
       parameters:
@@ -10600,6 +10604,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Reads an endpoint list item
+      tags:
+        - Security Solution Endpoint Exceptions API
     post:
       operationId: CreateEndpointListItem
       requestBody:
@@ -10692,6 +10698,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Creates an endpoint list item
+      tags:
+        - Security Solution Endpoint Exceptions API
     put:
       operationId: UpdateEndpointListItem
       requestBody:
@@ -10790,6 +10798,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Updates an endpoint list item
+      tags:
+        - Security Solution Endpoint Exceptions API
   /api/endpoint_list/items/_find:
     get:
       operationId: FindEndpointListItems
@@ -10903,6 +10913,8 @@ paths:
                   #/components/schemas/Security_Solution_Endpoint_Exceptions_API_SiemErrorResponse
           description: Internal server error
       summary: Finds endpoint list items
+      tags:
+        - Security Solution Endpoint Exceptions API
   /api/endpoint/action:
     get:
       description: Get a list of all response actions.
@@ -42116,6 +42128,11 @@ tags:
       sent to Elastic Security into detection alerts. These alerts are displayed
       on the Detections page.
     name: Security Solution Detections API
+  - description: >-
+      Endpoint Exceptions API allows you to manage detection rule endpoint
+      exceptions to prevent a rule from generating an alert from incoming events
+      even when the rule's other criteria are met.
+    name: Security Solution Endpoint Exceptions API
   - description: Interact with and manage endpoints running the Elastic Defend integration.
     name: Security Solution Endpoint Management API
   - description: ''
