--- a/src/plugins/unified_histogram/tsconfig.json
+++ b/src/plugins/unified_histogram/tsconfig.json
@@ -33,6 +33,7 @@
     "@kbn/discover-utils",
     "@kbn/visualization-utils",
     "@kbn/search-types",
+    "@kbn/presentation-publishing",
   ],
   "exclude": [
     "target/**/*",
