[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/security_solution/tsconfig.json
+++ b/x-pack/plugins/security_solution/tsconfig.json
@@ -227,5 +227,6 @@
     "@kbn/entities-schema",
     "@kbn/inference-plugin",
     "@kbn/core-saved-objects-server-mocks",
+    "@kbn/core-http-router-server-internal",
   ]
 }
