--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         language: [ 'javascript' ]
-        branch: [ 'main', '7.17' ]
+        branch: [ 'main', '7.17', '8.x' ]
 
     steps:
     - name: Checkout repository
@@ -73,6 +73,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{secrets.KIBANAMACHINE_TOKEN}}
         SLACK_TOKEN: ${{secrets.CODE_SCANNING_SLACK_TOKEN}}
+        CODEQL_BRANCHES: 7.17,8.x,main
       run: |
         npm ci --omit=dev
-        node codeql-alert 
+        node codeql-alert
