[CI] Auto-commit changed files from 'node scripts/notice'

--- a/packages/kbn-ftr-common-functional-ui-services/tsconfig.json
+++ b/packages/kbn-ftr-common-functional-ui-services/tsconfig.json
@@ -13,6 +13,7 @@
     "@kbn/test-subj-selector",
     "@kbn/ftr-common-functional-services",
     "@kbn/std",
-    "@kbn/expect"
+    "@kbn/expect",
+    "@kbn/core-http-common"
   ]
 }
