Sort by alerts & health status

--- a/x-pack/plugins/observability_solution/inventory/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/inventory/kibana.jsonc
@@ -19,7 +19,8 @@
       "share",
       "alerting",
       "ruleRegistry",
-      "globalSearch"
+      "globalSearch",
+      "slo"
     ],
     "requiredBundles": [
       "kibanaReact",
