[CI] Auto-commit changed files from 'node scripts/yarn_deduplicate'

--- a/x-pack/plugins/cases/tsconfig.json
+++ b/x-pack/plugins/cases/tsconfig.json
@@ -76,6 +76,8 @@
     "@kbn/core-http-router-server-internal",
     "@kbn/presentation-publishing",
     "@kbn/alerts-ui-shared",
+    "@kbn/data-views-plugin",
+    "@kbn/inspector-plugin",
   ],
   "exclude": [
     "target/**/*",
