Revert "use unlabel event"
This reverts commit a4b32b5c359fb51a3897640a8ebcf385a63ac3c6.

--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -22,7 +22,7 @@ jobs:
             || github.event.label.name == 'auto-backport'
           )
         )
-        || (github.event.action == 'unlabeled' && github.event.unlabel.name == 'backport:skip')
+        || (github.event.action == 'unlabeled' && github.event.label.name == 'backport:skip')
         || (github.event.action == 'closed')
       )
     steps:
